apps/vpn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy
  namespace: network-services
  labels:
    app.kubernetes.io/name: wg-easy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wg-easy
  ports:
    - name: http
      port: 51821
      targetPort: http
      protocol: TCP
